# ai-analytics

./: .dockerignore  .env.compose.example  .gitignore  attendance_chunk1A.sql  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  schema.sql  seed_assessments_and_risk.sql  seed_classes.sql  seed_enrollments_chunk_1.sql  seed_medium.sql  seed_students_1.sql  seed_students_2.sql  seed_students_2b.sql  seed_subjects.sql  seed_teachers.sql  seed_users.sql  tsconfig.json
apps/api/: .dockignore  .env.example  Dockerfile  Dockerfile.prod  docker-entrypoint.sh  eslint.config.mjs  package.json  pnpm-workspace.yaml  seed.js  tsconfig.json
deploy/: docker-compose.yml
examples/: mapping-spec-rest.example.json  mapping-spec.example.json
infra/: SECURITY.md
scripts/: e2e.sh
services/ai/: Dockerfile  pyproject.toml
services/ai/learning_analytics_ai/: __init__.py  config.py  db.py  main.py  security.py
services/ai/learning_analytics_ai/api/: generate.py  predict.py
services/ai/learning_analytics_ai/features/: __init__.py  engineering.py  queries.py
services/ai/learning_analytics_ai/jobs/: batch_refresh.py
services/ai/learning_analytics_ai/models/: __init__.py  risk_model.py
services/ai/learning_analytics_ai/services/: __init__.py  prediction.py
services/ai/learning_analytics_ai/training/: __init__.py  labels.py  train_risk.py
services/ai/training/: xgboost_optional.py
sql/: 20260416_schema_api_alignment.sql  20260416_users_auth_tenant_migration.sql  ai_student_class_scores.sql  mapping_layer.sql  unified_learning_analytics_core.sql
(+868 files in other folders)
