[project]
name = "learning-analytics-ai"
version = "0.1.0"
description = "ML inference and batch scoring for learning analytics (risk + engagement)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
  "joblib>=1.4.0",
]

[project.optional-dependencies]
xgboost = ["xgboost>=2.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.8.0"]

[project.scripts]
train-risk-model = "learning_analytics_ai.training.train_risk:main"
batch-ai-scores = "learning_analytics_ai.jobs.batch_refresh:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["learning_analytics_ai"]

[tool.ruff]
line-length = 100
